@@ -106,26 +106,6 @@ sub vhost_selector {
     my $uri = $req->request_uri;
     my $maps = $cb->{service}{extra_config}{_vhosts} ||= {};
 
-    # ability to ask for one host, but actually use another.  (for
-    # circumventing javascript/java/browser host restrictions when you
-    # actually control two domains).
-    if ($vhost && $uri =~ m!^/__using/([\w\.]+)(?:/\w+)(?:\?.*)?$!) {
-        my $alt_host = $1;
-
-        # update our request object's Host header, if we ended up switching them
-        # around with /__using/...
-        my $svc_name = $maps->{"$vhost;using:$alt_host"};
-        my $svc = $svc_name ? Perlbal->service($svc_name) : undef;
-        unless ($svc) {
-            $cb->_simple_response(404, "Vhost twiddling not configured for requested pair.");
-            return 1;
-        }
-
-        $req->header("Host", $alt_host);
-        $svc->adopt_base_client($cb);
-        return 1;
-    }
-
     # returns 1 if done with client, 0 if no action taken
     my $map_using = sub {
         my ($match_on, $force) = @_;
@@ -156,6 +136,26 @@ sub vhost_selector {
 
     # Strip off the :portnumber, if any
     $vhost =~ s/:\d+$//;
+
+    # ability to ask for one host, but actually use another.  (for
+    # circumventing javascript/java/browser host restrictions when you
+    # actually control two domains).
+    if ($vhost && $uri =~ m!^/__using/([\w\.]+)(?:/\w+)(?:\?.*)?$!) {
+        my $alt_host = $1;
+
+        # update our request object's Host header, if we ended up switching them
+        # around with /__using/...
+        my $svc_name = $maps->{"$vhost;using:$alt_host"};
+        my $svc = $svc_name ? Perlbal->service($svc_name) : undef;
+        unless ($svc) {
+            $cb->_simple_response(404, "Vhost twiddling not configured for requested pair.");
+            return 1;
+        }
+
+        $req->header("Host", $alt_host);
+        $svc->adopt_base_client($cb);
+        return 1;
+    }
 
     # try the literal mapping
     return if $map_using->($vhost);
